--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=todoList
+
+
+logging.level.org.springframework=DEBUG
+
+#Oracle DataBase Configuration
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@124.198.47.195:1521:xe
+spring.datasource.username=jdeveloper10
+spring.datasource.password=jdeveloper10
