--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,11 @@ dependencies {
 
     // 기타 테스트 관련 의존성
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    
+    // Spring Security 의존성
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    // Spring Security에서 비밀번호 암호화를 위한 BCrypt 의존성
+    implementation 'org.springframework.security:spring-security-crypto'
 
 }
 
