--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@124.198.47.195:1521:xe
 spring.datasource.username=jdeveloper10
 spring.datasource.password=jdeveloper10
+####################Thymeleaf\uc124\uc815####################
+spring.thymeleaf.prefix=classpath:templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.cache=false
