--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.check-template-location=true
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.cache=false
+
+spring.resources.static-locations=classpath:/static/
+spring.web.resources.add-mappings=true
