fix:(배포수정)포트번호, action주소 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,14 @@ spring.application.name=todoList
 server.port=8081
 
 logging.level.org.springframework=DEBUG
+logging.level.org.mybatis=DEBUG
+logging.level.org.springframework.jdbc.core=DEBUG
 
 #Oracle DataBase Configuration
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@124.198.47.195:1521:xe
-spring.datasource.username=jdeveloper10
-spring.datasource.password=jdeveloper10
+spring.datasource.username=jdeveloper57
+spring.datasource.password=jdeveloper57
 ####################Thymeleaf\uc124\uc815####################
 spring.thymeleaf.prefix=classpath:templates/
 spring.thymeleaf.suffix=.html
