--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ logging.level.org.springframework.jdbc.core=DEBUG
 
 #Oracle DataBase Configuration
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=sys
+spring.datasource.url=jdbc:oracle:thin:@127.30.1.9:1521:xe
+spring.datasource.username=sys as sysdba
 spring.datasource.password=sys
 ####################Thymeleaf\uc124\uc815####################
 spring.thymeleaf.prefix=classpath:templates/
