초기데이터 등록 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,4 @@ spring.thymeleaf.cache=false
 
 spring.resources.static-locations=classpath:/static/
 spring.web.resources.add-mappings=true
+spring.datasource.initialization-mode=always
