--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,6 @@ spring.thymeleaf.cache=false
 spring.resources.static-locations=classpath:/static/
 spring.web.resources.add-mappings=true
 spring.datasource.initialization-mode=always
+
+mybatis.config-location=classpath:mybatis_config.xml
+mybatis.mapper-locations=classpath:com/my/todoList/mapper/*.xml
